--- a/LayoutTests/platform/mac/fast/events/content-inset-hit-testing.html
+++ b/LayoutTests/platform/mac/fast/events/content-inset-hit-testing.html
@@ -15,7 +15,7 @@
             return;
         if (window.testRunner) {
             testRunner.waitUntilDone();
-            await testRunner.setTopContentInset(100);
+            await testRunner.setObscuredContentInsets(100, 0, 0, 0);
             testRunner.dumpAsText();
         }
 
