--- a/LayoutTests/fast/scrolling/latching/scroll-select-bottom-test.html
+++ b/LayoutTests/fast/scrolling/latching/scroll-select-bottom-test.html
@@ -66,7 +66,7 @@
         description("Tests that a select doesn't pass wheel events to main frame when scrolling at bottom");
 
         if (window.testRunner)
-            await testRunner.setTopContentInset(clientInset);
+            await testRunner.setObscuredContentInsets(clientInset, 0, 0, 0);
 
         if (window.eventSender) {
             setTimeout(scrollTest, 0);
