--- a/LayoutTests/tiled-drawing/scrolling/non-fast-region/top-content-inset.html
+++ b/LayoutTests/tiled-drawing/scrolling/non-fast-region/top-content-inset.html
@@ -19,7 +19,7 @@
         {
             window.setTimeout(async () => {
                 if (window.testRunner)
-                    await testRunner.setTopContentInset(60);
+                    await testRunner.setObscuredContentInsets(60, 0, 0, 0);
                 // Scroll to test the mapping from document to view coords.
                 document.scrollingElement.scrollTop = 195;
                 dumpRegionAndNotifyDone();
