--- a/LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-expected.html
+++ b/LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-expected.html
@@ -22,7 +22,7 @@ body {
 <script>
 async function runTest() {
     if (window.testRunner)
-        await testRunner.setTopContentInset(100);
+        await testRunner.setObscuredContentInsets(100, 0, 0, 0);
 }
 window.addEventListener('load', runTest, false);
 </script>
