--- a/LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-local.html
+++ b/LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-local.html
@@ -24,7 +24,7 @@ body {
 <script>
 async function runTest() {
     if (window.testRunner)
-        await testRunner.setTopContentInset(100);
+        await testRunner.setObscuredContentInsets(100, 0, 0, 0);
     window.scrollTo(0, 100);
 }
 window.addEventListener('load', runTest, false);
