AX: Defer isolated tree node removals so they are batched with other queued node updates https://bugs.webkit.org/show_bug.cgi?id=288001 rdar://145164516
Reviewed by Tyler Wilcock.

In 271907@main, we added a new mechanism to de-duplicate node changes by batching them and
processing them in batches off of a timer. This included most types of changes, but did not
include node removals. This means that nodes could possibly be removed before other types
of updates happen, causing the tree to be temporarily out of sync.

To fix this, let's start to queue node changes as well in `queueNodeRemoval`. This changes
handles that and updates `removeNode` to work off of AXIDs instead of object references
which it has before.

Many layout tests were updated to be asynchronous, or to be made more asynchronous, due to
behavior this change exposed.

* LayoutTests/accessibility/accessibility-object-detached-expected.txt:
* LayoutTests/accessibility/accessibility-object-detached.html:
* LayoutTests/accessibility/canvas-fallback-content-expected.txt:
* LayoutTests/accessibility/canvas-fallback-content.html:
* LayoutTests/accessibility/datetime/input-date-field-labels-and-value-changes.html:
* LayoutTests/accessibility/mac/element-is-ignored-expected.txt:
* LayoutTests/accessibility/mac/element-is-ignored.html:
* LayoutTests/accessibility/mac/focus-moves-cursor-expected.txt:
* LayoutTests/accessibility/mac/focus-moves-cursor.html:
* LayoutTests/accessibility/mac/slider-thumb-value-crash-expected.txt:
* LayoutTests/accessibility/mac/slider-thumb-value-crash.html:
* LayoutTests/accessibility/mac/stale-textmarker-crash.html:
* LayoutTests/accessibility/mac/textmarker-routines-expected.txt:
* LayoutTests/accessibility/mac/textmarker-routines.html:
* LayoutTests/accessibility/title-ui-element-correctness.html:
* LayoutTests/platform/mac/accessibility/canvas-fallback-content-expected.txt:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::remove):
* Source/WebCore/acce

--- a/LayoutTests/accessibility/accessibility-object-detached.html
+++ b/LayoutTests/accessibility/accessibility-object-detached.html
@@ -1,15 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 <body>
-<script src="../resources/js-test-pre.js"></script>
+<script src="../resources/js-test.js"></script>
+<script src="../resources/accessibility-helper.js"></script>
 
 <canvas id="canvas"></canvas>
 
-<div id="console"></div>
 <script>
-description("This test makes sure that AccessibilityObjects are detached when the node they point to is detached.");
+var output = "This test makes sure that AccessibilityObjects are detached when the node they point to is detached.\n\n";
 
 if (window.testRunner && window.accessibilityController) {
+    window.jsTestIsAsync = true;
     window.testRunner.dumpAsText();
 
     // Create a button on the page, focus it and get its accessibility role.
@@ -22,12 +23,16 @@ if (window.testRunner && window.accessibilityController) {
     // Now remove the node from the tree and get the role of the detached accessibility object.
     // We detect that it's detached just by checking that the role is different (empty or unknown).
     document.body.removeChild(button);
-    window.expectedDetachedRole = axElement.role;
-    shouldBeTrue("expectedButtonRole != expectedDetachedRole");
+    setTimeout(async function() {
+        await waitFor(() => expectedButtonRole != axElement.role);
+        window.expectedDetachedRole = axElement.role;
+        output += await expectAsync("expectedButtonRole != expectedDetachedRole", "true");
+        debug(output);
+        finishJSTest();
+    }, 0);
 }
 
 </script>
 
-<script src="../resources/js-test-post.js"></script>
 </body>
 </html>
