--- a/LayoutTests/accessibility/datetime/input-date-field-labels-and-value-changes.html
+++ b/LayoutTests/accessibility/datetime/input-date-field-labels-and-value-changes.html
@@ -29,7 +29,7 @@ if (window.accessibilityController) {
         return subfields;
     }
 
-    output+= "Original subfield values:\n";
+    output += "Original subfield values:\n";
     var subfields = getAndLogSubfields(axDateInput);
 
     setTimeout(async () => {
@@ -73,8 +73,12 @@ if (window.accessibilityController) {
 
         output += "\nSet the date via JavaScript.\n";
         dateInput.value = "2023-12-31";
-        await waitFor(() => axDateInput.childAtIndex(0).childAtIndex(0).children[4] != null);
-        await expectAsync("axDateInput.childAtIndex(0).childAtIndex(0).children[4].intValue", "2023");
+        await waitFor(() => {
+            var dateObject = axDateInput.childAtIndex(0).childAtIndex(0);
+            return dateObject.childrenCount >= 5 ? !!dateObject.children[4] : null;
+        });
+
+        output += await expectAsync("axDateInput.childAtIndex(0).childAtIndex(0).children[4].intValue", "2023");
         getAndLogSubfields(axDateInput);
 
         debug(output);
