MediaStreamTrack backgroundBlur setting is never updated rdar://145280495 https://bugs.webkit.org/show_bug.cgi?id=287692
Reviewed by Eric Carlson.

In case of configuration change for video tracks, we need to reset the settings to be able to get the new settings.

Updated mock infrastructure to test this.

* LayoutTests/fast/mediastream/getDisplayMedia-max-constraints4.html:
* LayoutTests/fast/mediastream/getDisplayMedia-max-constraints5.html:
* LayoutTests/fast/mediastream/mediastreamtrack-configurationchange-expected.txt:
* LayoutTests/fast/mediastream/mediastreamtrack-configurationchange.html:
* Source/WebCore/platform/mock/MockRealtimeMediaSourceCenter.cpp:
(WebCore::MockRealtimeMediaSourceCenter::triggerMockCaptureConfigurationChange):
* Source/WebCore/platform/mock/MockRealtimeMediaSourceCenter.h:
* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::triggerCameraConfigurationChange):
* Source/WebCore/platform/mock/MockRealtimeVideoSource.h:
* Source/WebKit/GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::triggerMockCaptureConfigurationChange):
* Source/WebKit/GPUProcess/GPUProcess.h:
* Source/WebKit/GPUProcess/GPUProcess.messages.in:
* Source/WebKit/UIProcess/API/C/WKPage.cpp:
(WKPageTriggerMockCaptureConfigurationChange):
* Source/WebKit/UIProcess/API/C/WKPagePrivate.h:
* Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::triggerMockCaptureConfigurationChange):
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.h:
* Tools/WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::triggerMockCaptureConfigurationChange):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.h:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::triggerMockCaptureConfigurationChange):
* Tools/WebKitTestRunner/TestController.h:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(

--- a/LayoutTests/fast/mediastream/getDisplayMedia-max-constraints4.html
+++ b/LayoutTests/fast/mediastream/getDisplayMedia-max-constraints4.html
@@ -29,7 +29,7 @@ promise_test(async (test) => {
         setTimeout(() => reject("configuration change timeout"), 5000);
     });
     if (window.testRunner)
-        testRunner.triggerMockCaptureConfigurationChange(false, true);
+        testRunner.triggerMockCaptureConfigurationChange(false, false, true);
     await promise;
 
     let videoFrame2;
